# cd14712-exercises

Exercise-MCP-Architecture/exercises/starter/: instructions.md
Exercise-Workflow_Analysis/exercises/solution/: solution.md
Exercise-Workflow_Analysis/exercises/starter/: instructions.md
Exercise-mcp-agent/exercises/: README.md
Exercises-Calculator-Server/exercises/exercise_3a/solution/calculator-mcp/: calculator_server.py
Exercises-Calculator-Server/exercises/exercise_3b/: instructions.md
Project-Starter/: README.md  pyproject.toml  server_config.json  starter_client.py  starter_server.py
demos/: chatbot.py  client.py  server.py
lesson-2-mcp-arch/exercises/solution/: solution.md
lesson-3-mcp-app/exercises/exercise_3a/: instructions.md
lesson-3-mcp-app/exercises/exercise_3a/solution/calculator-mcp/: pyproject.toml
lesson-3-mcp-app/exercises/exercise_3b/solution/: client.py
lesson-8-mcp-agent/exercises/: servers_config.json
lesson-8-mcp-agent/exercises/solution/: mcp_agent_solution.py
lesson-8-mcp-agent/exercises/starter/: instructions.md  mcp_agent_starter.py
python-sdk-main/examples/clients/simple-chatbot/: CLAUDE_DESKTOP_LIMITATIONS.md  INSTRUCTOR_NOTES.md  README.MD  VOCAREUM_SETUP_GUIDE.md  test_vocareum.py
python-sdk-main/examples/clients/simple-chatbot/mcp_simple_chatbot/: main.py  (+1 more)
python-sdk-main/examples/servers/everything-server/: README.md  pyproject.toml
python-sdk-main/examples/servers/everything-server/mcp_everything_server/: __init__.py  __main__.py  server.py
python-sdk-main/tests/client/: test_auth.py  test_session.py
